--- a/not/css/style.css
+++ b/not/css/style.css
@@ -46,6 +46,7 @@ body{
     -o-transform: rotate(90deg);
     /* Internet Explorer */
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    display:none;
 }
 a.link{
     font-size:2em;
