--- a/not/css/style.css
+++ b/not/css/style.css
@@ -59,14 +59,14 @@ body{
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     display:none;
 }
-a.link{
+a.links{
     font-size:2em;
     text-decoration:none;
-    color:rgb(127,162,255);
+    #color:rgb(127,162,255);
     margin-right:0.5em;
 }
-a.link:hover{color:red;}
-a.link:visited{}
+a.links:hover{#color:red;}
+a.links:visited{}
 .hidden{
     display:none;
 }
